--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="main">
       <div id="page">
        
-          <img src="./portfolio.jpeg" style="padding: 150px; border-radius: 50%;" alt="" />
+          <img src="Bharat-Intern-Portfolio-Website Task2/portfolio.jpeg" style="padding: 150px; border-radius: 50%;" alt="" />
         
         <div id="text">
           <h2>Hello</h2>
@@ -107,7 +107,7 @@
             </div>
             <div id="image">
               <a href="https://rankithore.github.io/weather-1/">
-                <img src="./weather-forecast.webp" alt="Description of the project" />
+                <img src="Bharat-Intern-Portfolio-Website Task2/weather-forecast.webp" alt="Description of the project" />
               </a>
             </div>
           </div>
@@ -117,7 +117,7 @@
             </div>
             <div id="image">
               <a href="https://rankithore.github.io/debugdeployment_To-Do-List/">
-                <img src="./todo.jpg" alt="Description of the project" />
+                <img src="Bharat-Intern-Portfolio-Website Task2/todo.jpg" alt="Description of the project" />
               </a>
             </div>
           </div>
@@ -127,7 +127,7 @@
             </div>
             <div id="image">
               <a href="your_destination_link_here">
-                <img src="./Quiz.jpg" alt="Description of the project" />
+                <img src="Bharat-Intern-Portfolio-Website Task2/Quiz.jpg" alt="Description of the project" />
               </a>
             </div>
           </div>
