--- a/index.html
+++ b/index.html
@@ -149,24 +149,24 @@
           <br />
 
           <a class="btn" href=""
-            ><img src="./gmail.png" width="40px" height="40px"
+            ><img src="Bharat-Intern-Portfolio-Website Task2/gmail.png" width="40px" height="40px"
           /></a>
 
 
           <a class="btn" href=""
-            ><img src="./linkdln.png" width="40px" height="40px"
+            ><img src="Bharat-Intern-Portfolio-Website Task2/linkdln.png" width="40px" height="40px"
           /></a>
 
           <a class="btn" href=""
-            ><img src="./github.jpg" width="40px" height="40px"
+            ><img src="Bharat-Intern-Portfolio-Website Task2/github.jpg" width="40px" height="40px"
           /></a>
 
           <a class="btn" href=""
-            ><img src="./twitter.png" width="40px" height="40px"
+            ><img src="Bharat-Intern-Portfolio-Website Task2/twitter.png" width="40px" height="40px"
           /></a>
 
           <a class="btn" href=""
-            ><img src="./insta.webp" width="40px" height="40px"
+            ><img src="Bharat-Intern-Portfolio-Website Task2/insta.webp" width="40px" height="40px"
           /></a>
         </div>
 
